--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,11 @@ margin: 0 auto;
   color: #edcd1f;
 }
 .parallax-container{
-  height: 400px !important;;
+  height: 63vh !important;;
+}
+.card .card-image  {
+  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(50%);
 }
 /* img {
     -webkit-filter: sepia(100%);
